# Hackathon-Phase-3

./: .gitignore  DEPLOYMENT.md  README.md  VERCEL_DEPLOY.md  deploy.bat  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  test_basic.py  test_implementation.py
backend/.claude/: settings.local.json
backend/docs/: AGENT_MCP_INTEGRATION.md  REUSABILITY_VALIDATION.md
backend/src/: main.py
backend/src/api/: auth_endpoint.py  chat_endpoint.py  responses.py
backend/src/core/: config.py  database.py  logging.py
backend/src/mcp_tools/: __init__.py  add_task_tool.py  base.py  complete_task_tool.py  delete_task_tool.py  list_tasks_tool.py  schemas.py  tool_registry.py  update_task_tool.py
backend/src/middleware/: __init__.py  auth_middleware.py
backend/src/models/: __init__.py  chat_message.py  chat_response.py  conversation_metadata.py  session.py  task.py  tool_call.py  user.py
backend/src/services/: __init__.py  agent_runner.py  auth_service.py  confirmation_handler.py  conversation_service.py  error_humanizer.py  llm_client.py  mcp_client_direct.py  response_formatter.py  task_reference_resolver.py  task_service.py
backend/src/utils/: jwt.py  password.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/.claude/: settings.local.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api-config.ts  auth-config.ts
frontend/src/services/: api-client.ts  auth-service.ts  chatApi.ts  conversationStorage.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  auth.ts  chat.types.ts
history/prompts/001-mcp-task-tools/: 1-mcp-task-tools-spec-created.spec.prompt.md  2-mcp-task-tools-plan-completed.plan.prompt.md  3-mcp-task-tools-tasks-generated.tasks.prompt.md  4-mcp-implementation-started.green.prompt.md  5-mcp-implementation-complete.green.prompt.md
history/prompts/001-reusable-agents/: 001-implementation-plan-creation.plan.prompt.md  002-implementation-tasks-generation.tasks.prompt.md  003-core-agent-and-skills-implementation.green.prompt.md
history/prompts/002-todo-mcp-tools/: 001-todo-mcp-tools-specification.spec.prompt.md  2-design-mcp-server-todo-tools.plan.prompt.md  3-generate-tasks-todo-mcp-tools.tasks.prompt.md  4-implement-todo-mcp-tools.implement.prompt.md
history/prompts/003-chat-agent-connector/: 6-plan-chat-agent-connector.plan.prompt.md  (+3 more)
specs/001-mcp-task-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-reusable-agents/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-agent-orchestration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-mcp-tools/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-chat-agent-connector/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-chatkit-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-stateless-chat-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+50 files in other folders)
